Clean up file and add logo/header

--- a/index.html
+++ b/index.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Word Grid Guru</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
-  
-  <!-- JavaScript
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
   <script src="js/main.js" type="text/javascript"></script>
 
 </head>
+
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
 
 	    <div id="form" class="six columns">
 	    	
-	        <h1>Word Grid Guru</h1>
+			<h1 style="display:none;">Word Grid Guru</h1>
+			<table class="results-table title" caption="word grid guru">
+				<tr>
+					<td>w</td>
+					<td>o</td>
+					<td>r</td>
+					<td>d</td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+					<td>i</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>r</td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>g</td>
+					<td>u</td>
+					<td>r</td>
+					<td>u</td>
+				</tr>
+			</table>
 			
 		    <div id="step1" class="row">
 				<h2>Step 1: Build Your Grid</h2>
@@ -113,7 +116,6 @@
     </div>
   </div>
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
+
 </html>
